Made bug-fix for header image on mobile + added Jojo photo credit in source

--- a/public/css/header-and-links.css
+++ b/public/css/header-and-links.css
@@ -43,6 +43,9 @@ div#header-image-container {
 	overflow: visible;
 	background-image: url("./../resources/banner-1-min.jpg");
 	background-attachment: fixed;
+	-webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
 	background-size: cover;
 	background-position: center center;
 	background-repeat: repeat;
